:lipstick: Style heading that lives outside section to avoid flicker from flexbox

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -628,6 +628,12 @@ textarea {
   margin-bottom: 1rem;
 }
 
+.no-flex-heading {
+  width: 5em;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+
 .section-text {
   font-size: 2em;
 }
